crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__fstring_named_unicode_raw.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
[
    FStringStart,
    FStringMiddle(
        "\\N",
    ),
    Lbrace,
    Name {
        name: "BULLET",
    },
    Rbrace,
    FStringMiddle(
        " normal",
    ),
    FStringEnd,
    Newline,
]
