crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__fstring_nested.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
[
    FStringStart,
    FStringMiddle(
        "foo ",
    ),
    Lbrace,
    FStringStart,
    FStringMiddle(
        "bar ",
    ),
    Lbrace,
    Name {
        name: "x",
    },
    Plus,
    FStringStart,
    Lbrace,
    Name {
        name: "wow",
    },
    Rbrace,
    FStringEnd,
    Rbrace,
    FStringEnd,
    Rbrace,
    FStringMiddle(
        " baz",
    ),
    FStringEnd,
    FStringStart,
    FStringMiddle(
        "foo ",
    ),
    Lbrace,
    FStringStart,
    FStringMiddle(
        "bar",
    ),
    FStringEnd,
    Rbrace,
    FStringMiddle(
        " some ",
    ),
    Lbrace,
    FStringStart,
    FStringMiddle(
        "another",
    ),
    FStringEnd,
    Rbrace,
    FStringEnd,
    Newline,
]
