crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__fstring_with_ipy_escape_command.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
[
    FStringStart,
    FStringMiddle(
        "foo ",
    ),
    Lbrace,
    Exclamation,
    Name {
        name: "pwd",
    },
    Rbrace,
    FStringMiddle(
        " bar",
    ),
    FStringEnd,
    Newline,
]
